--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,240 @@
+/* GENERAL */
 html {
-  background: #0025ff;
-  color: #fff;
+  color: black;
+  background-color: #f1f1f1;
 }
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* DESIGN FOR MOBILE SCREENS */
+/* Header */
+.desktop {
+  display: none;
+}
+
+.mobile {
+  display: contents;
+}
+
+.mobile-wrap {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(108, 174, 117);
+  padding: 0 20px;
+  height: 60px;
+}
+
+.logo {
+  width: 40px;
+  height: 40px;
+  padding: 10px;
+}
+
+.menu {
+  padding-top: 10px;
+}
+
+.menu-icon {
+  font-size: 40px;
+  display: block;
+  color: white;
+  cursor: pointer;
+  float: right;
+}
+
+.menu-ul {
+  position: absolute;
+  z-index: 1;
+  top: 2.5em;
+  visibility: hidden;
+  transform: translateY(-1em);
+  transition: all 0.3s ease-in-out;
+  list-style: none;
+  padding: 5px 20px;
+}
+
+#checkbox {
+  opacity: 0;
+  position: absolute;
+}
+
+#checkbox:checked ~ .menu-ul {
+  position: relative;
+  visibility: visible;
+  transform: translateY(0);
+  background-color: #f1f1f1;
+  font-size: 16px;
+}
+
+.menu-ul li {
+  border-radius: 0.5em;
+}
+
+.menu-ul li:hover {
+  background-color: grey;
+}
+
+.menu-ul li a {
+  display: block;
+  padding: 0.7em 0.5em;
+  margin: 0;
+  text-decoration: none;
+  text-align: left;
+}
+
+/* Big news section */
+/* Positioning the container holding the image and the text of big news article */
+.big-news {
+  padding: 20px;
+}
+
+.container {
+  position: relative;
+}
+
+.container img {
+  width: 100%;
+  height: auto;
+}
+
+/* text of big news article lies below the image */
+.text-block {
+  position: relative;
+  display: block;
+  background-color: black;
+  color: white;
+  padding: 20px;
+}
+
+.text-block a {
+  color: white;
+  font-family: Georgia,Times New Roman,serif;
+}
+
+/* Other news section */
+/* other news articles shown in column */
+.other-news {
+  padding: 20px;
+  display: grid;
+  grid-template-columns: none;
+}
+
+.article {
+  margin: 10px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  width: auto; /* set the width of other news articles so it takes up the width of the div */
+}
+
+.article img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.article-text a {
+  color: black;
+  font-family: Georgia,Times New Roman,serif;
+}
+
+/* Footer */
+footer {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(108, 174, 117);
+  flex-direction: row;
+  padding: 0 20px;
+}
+
+.copyright {
+  display: flex;
+  align-items: flex-end;
+  color: white;
+}
+
+.contact ul {
+  display: flex;  
+  list-style: none;
+}
+
+.contact ul li {
+  display: block;
+  padding-right: 10px;
+  width: 30px;
+  height: 30px;
+}
+
+.contact ul li a {
+  font-size: 30px;
+  color: white;
+}
+
+.contact ul li a:hover {
+  color: grey;
+}
+
+/* DESIGN FOR BIGGER SCREENS - Ipad and desktop */
+/* media queries for ipad screens - other news articles wrap in rows */
+@media (min-width: 667px) and (max-width: 900px) {
+  .other-news {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/* media queries for desktop */
+@media only screen and (min-width: 900px) {
+  /* Header */
+  .desktop{
+    background-color: rgb(108, 174, 117);
+    color: white;
+    padding: 0 20px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  /* Styling header and its items on desktop */
+  .mobile {
+    display: none;
+  }
+
+  .site-name-logo, .topnav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .site-name-logo h3 {
+    font-family: helvetica, sans-serif;
+  }
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    padding: 10px;
+    color: white;
+    text-decoration: none;
+  }
+
+  /* Change the color of links on hover and add a color to the active/current link */
+  .topnav a:hover, .topnav a.active {
+    background-color: grey;
+    border-radius: 4px;
+    font-weight: bold;
+  }
+
+  /* Big news section */
+  /* Placing text block of big news article inside the image, approximately center right */
+  .text-block {
+    position: absolute;
+    top: 35%;
+    right: 20px;
+    width: 45%;
+  }
+
+  /* Other news section - articles shown in columns */
+  .other-news {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
