--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,47 @@
-html {
-  background: #0025ff;
-  color: #fff;
+html,
+body {
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+ƒ a:visited {
+    color: black;
+}
+
+.navigation {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid black;
+}
+
+.navigation-link {
+    display: block;
+    padding: 20px;
+}
+
+.navigation-link:hover {
+    color: violet;
+}
+
+.navigation-links {
+    display: flex;
+    flex-direction: row;
+}
+
+.navigation-brand {
+    display: flex;
+    padding-left: 20px;
+}
+
+.navigation-title {
+    font-weight: 600;
 }
