Change color & position of nav links when hovering

--- a/code/style.css
+++ b/code/style.css
@@ -13,7 +13,7 @@ a {
     text-decoration: none;
 }
 
-ƒ a:visited {
+a:visited {
     color: black;
 }
 
@@ -28,8 +28,9 @@ a {
     padding: 20px;
 }
 
-.navigation-link:hover {
-    color: violet;
+.navigation-link-effect:hover {
+    color: #373f51;
+    padding: 19px 20px 1px 20px;
 }
 
 .navigation-links {
