--- a/code/style.css
+++ b/code/style.css
@@ -8,6 +8,10 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+img {
+    display: block;
+}
+
 a {
     color: black;
     text-decoration: none;
@@ -58,6 +62,44 @@ a:visited {
     height: 2px;
     width: 22px;
     background-color: black;
+}
+
+.hero {
+    display: flex;
+    flex-direction: row;
+    border-radius: 16px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.container {
+    margin: auto 15px;
+    padding: 15px 0;
+}
+
+.hero-image {
+    border-radius: 16px 0 0 16px;
+    width: 50%;
+}
+
+.hero-content {
+    padding: 15px;
+}
+
+.hero-heading {
+    margin-top: 0;
+    margin-bottom: 5px
+}
+
+.hero-button {
+    padding: 8px 20px;
+    border-radius: 16px;
+    background-color: #facc15;
+    border: none;
+}
+
+.hero-button:hover {
+    background-color: #eab308;
+    cursor: pointer;
 }
 
 @media (max-width: 1024px) {
