--- a/code/style.css
+++ b/code/style.css
@@ -24,7 +24,6 @@ a:visited {
 .navigation {
     display: flex;
     flex-direction: row;
-    border-bottom: 1px solid black;
 }
 
 .grow {
@@ -72,8 +71,9 @@ a:visited {
 }
 
 .container {
-    margin: auto 15px;
-    padding: 15px 0;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 0 15px;
 }
 
 .hero-image {
