--- a/code/style.css
+++ b/code/style.css
@@ -5,7 +5,8 @@ html {
 
 
 body {
-  background-color: #FFF6EA;
+  background: rgb(255, 246, 234);
+  background: radial-gradient(circle, rgba(255, 246, 234, 1) 0%, rgba(255, 238, 238, 1) 50%, rgba(255, 246, 234, 1) 100%);
   width: 60%;
   margin-left: 100px;
 }
@@ -151,7 +152,7 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  background-color: #FFF6EA;
+  background-color: none;
   overflow: hidden;
 }
 
