--- a/code/style.css
+++ b/code/style.css
@@ -185,8 +185,8 @@ li a:hover {
   }
 
   .header-title {
-    margin: -10px 0px 30px 10px;
-    width: 100%;
+    margin: -10px auto 30px;
+    max-width: 90%;
   }
 
   .resizable-image {
@@ -260,6 +260,9 @@ li a:hover {
   .header-title {
     margin: -10px 0px 30px 10px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .resizable-image {
