--- a/code/style.css
+++ b/code/style.css
@@ -5,8 +5,8 @@ html {
 
 
 body {
-  background: rgb(255, 246, 234);
-  background: radial-gradient(circle, rgba(255, 246, 234, 1) 0%, rgba(255, 238, 238, 1) 50%, rgba(255, 246, 234, 1) 100%);
+  background: rgb(255, 250, 243);
+  background: linear-gradient(128deg, rgba(255, 250, 243, 1) 0%, rgba(255, 233, 233, 1) 50%, rgba(255, 246, 234, 1) 100%);
   width: 60%;
   margin-left: 100px;
 }
