--- a/code/style.css
+++ b/code/style.css
@@ -187,6 +187,8 @@ li a:hover {
   .header-title {
     margin: -10px auto 30px;
     max-width: 90%;
+    display: flex;
+    flex-direction: row;
   }
 
   .resizable-image {
@@ -261,8 +263,7 @@ li a:hover {
     margin: -10px 0px 30px 10px;
     width: 100%;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
   }
 
   .resizable-image {
