--- a/code/style.css
+++ b/code/style.css
@@ -180,7 +180,6 @@ li a:hover {
   }
 
   header {
-    margin: 30px 10px 0 10px;
     width: 100%;
   }
 
@@ -188,7 +187,7 @@ li a:hover {
     margin: -10px auto 30px;
     max-width: 90%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
   }
 
   .resizable-image {
@@ -263,7 +262,7 @@ li a:hover {
     margin: -10px 0px 30px 10px;
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
   }
 
   .resizable-image {
