Small changes again

--- a/code/style.css
+++ b/code/style.css
@@ -188,6 +188,7 @@ li a:hover {
     max-width: 100%;
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
   }
 
   .resizable-image {
