--- a/code/style.css
+++ b/code/style.css
@@ -31,7 +31,7 @@ header {
 /* Text */
 h1 {
   font-size: 100px;
-  font-family: 'Bad Script', cursive;
+  font-family: 'Oswald', sans-serif;
   color: #f29ad3;
   text-align: left;
   margin: 0;
