--- a/code/style.css
+++ b/code/style.css
@@ -180,7 +180,9 @@ li a:hover {
   }
 
   header {
-    width: 90%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
 
   .header-title {
@@ -191,14 +193,8 @@ li a:hover {
     align-items: flex-start;
   }
 
-  ul {
-    padding: 0;
-    margin-top: 10px;
-  }
-
-  li {
-    list-style: none;
-    margin: 5px 0;
+  h1 {
+    font-size: 50px;
   }
 
   .resizable-image {
@@ -251,6 +247,10 @@ li a:hover {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+  }
+
+  h1 {
+    font-size: 60px;
   }
 
   .resizable-image {
