--- a/code/style.css
+++ b/code/style.css
@@ -194,11 +194,15 @@ li a:hover {
   }
 
   h1 {
-    font-size: 50px;
+    font-size: 40px;
+  }
+
+  li {
+    font-size: 10px;
   }
 
   .resizable-image {
-    width: 20%;
+    width: 10%;
   }
 
   img {
