--- a/code/style.css
+++ b/code/style.css
@@ -190,15 +190,15 @@ li a:hover {
     max-width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
   }
 
   h1 {
-    font-size: 40px;
+    font-size: 45px;
   }
 
   li {
-    font-size: 10px;
+    font-size: 12px;
   }
 
   .resizable-image {
