--- a/code/style.css
+++ b/code/style.css
@@ -1,62 +1,102 @@
 html {
-  background: #efc1e5;
+  background: #f5d4ee;
   color: #fff;
+}
+
+header {
+  display: block;
+  border: gray solid;
+  border-radius: 5px;
+  grid-column: 1 / 5;
+  grid-row: 1 / 2;
 }
 
 body {
   display: grid;
+  font-family: "Georgia";
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 200px);
 }
 
-header {
+.logo {
   display: flex;
   align-items: flex-start;
-  grid-column: 1 / span 2;
+  grid-column: 1 / 3;
 }
 
 h1 { 
-  display: flex;
+  font-family: "Bookman";
   background-color: rgb(224, 211, 194);
   padding: 5px;
   border: white solid;
 }
 
 nav {
-  grid-column: 3 / 5;
   display: flex;
+  grid-column: 3 / 5;
+  grid-row-start: 1;
   flex-direction: row;
   justify-content: flex-end;
   align-items: flex-start;
+  margin: 10px;
 }
 
 .nav-button {
-  display: flex;
-  justify-content: center;
-  background-color: #bd229b;
-  padding: 5px;
-  border-radius: 5px;
+  padding: 7px;
   margin: 3px;
+  background-color: #c067ac;
+  border-radius: 5px;
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
 }
 
 .big-news {
   grid-column: 3 / span 2;
-  grid-row: 2 / span 2;
+  grid-row-start: 2;
 }
 
 .news-grid {
   display: flex;
   grid-column: 1 / span 2;
-  grid-row: 2 / span 2;
+  grid-row-start: 2;
   flex-direction: row;
   flex-wrap: wrap;
 }
 
 .grid-cell {
-  background-color: red;
-  padding: 5px;
+  background-color: white;
+  color: gray;
+  padding: 10px;
+  border: solid rgba(167, 170, 179, 0.3);
   border-radius: 5px;
   margin: 5px;
   width: 300px;
   height: 200px;
 }
+
+h2 {
+  display: flex;
+  color: rgb(155, 153, 153);
+  font-family: "Georgia";
+  font-size: 30px;
+  margin-bottom: 0px;
+  margin-right: 20px;
+  justify-content: flex-end;
+}
+
+.nav-button:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+  color:#c067ac;
+}
+
+h4 {
+  display: flex;
+  font-size: 14px;
+  color: white;
+  text-decoration: none;
+  margin-top: 0px;
+  margin-right: 20px;
+  justify-content: flex-end;
+}
+
