--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,382 @@
-html {
-  background: #0025ff;
-  color: #fff;
+body {
+  background-color: aliceblue;
+}
+
+h1 {
+  color: rgb(0, 0, 0);
+  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 30px;
+  font-weight: 500px;
+  letter-spacing: 5px;
+  padding: 20px;
+  text-shadow: 30px 10px rgb(180, 170, 255);
+}
+
+
+h2 {
+  color: rgb(0, 0, 0);
+  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 15px;
+  font-weight: lighter;
+  letter-spacing: 5px;
+  padding: 10px;
+}
+
+h3 {
+  color: rgb(0, 0, 0);
+  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 14px;
+  font-weight: lighter;
+  padding: 10px;
+}
+
+p {
+  color: rgb(0, 0, 0);
+  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 12px;
+  letter-spacing: 2px;
+  padding: 10px;
+}
+
+.logo {
+  height: 300px;
+  width: auto;
+  display: inline-block;
+  margin: 0px;
+}
+
+
+.top-heading {
+  display: inline-block;
+  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 20px;
+  letter-spacing: 25px;
+  font-weight: lighter;
+  margin: 0px 0px 100px 200px;
+  text-shadow: 5px 40px rgb(180, 170, 255);
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: rgb(180, 170, 255);
+  border: 5px solid rgb(180, 170, 255);
+  border-radius: 10px;
+  margin: 10px 0px 50px 0px;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #000000;
+  text-align: center;
+  text-decoration: none;
+  font-size: 15px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: lighter;
+  letter-spacing: 5px;
+  padding: 14px 20px;
+}
+
+.topnav a:hover {
+  color: aqua;
+  transition-duration: 0.5s;
+}
+
+.topnav a.active {
+  background-color: black;
+  color: aqua;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+.flex-container {
+  justify-content: center;
+  display: flex;
+  flex-direction: row;
+}
+
+.flexbox-left {
+  background-color: rgb(202, 231, 255);
+  flex: 50%;
+  border: 2px solid rgb(202, 231, 255);
+  border-radius: 10px;
+  justify-content: center;
+  padding: 10px;
+  margin: 30px;
+}
+
+.flexbox-right {
+  background-color: rgb(202, 231, 255);
+  flex: 50%;
+  border: 2px solid rgb(202, 231, 255);
+  border-radius: 10px;
+  padding: 10px;
+  margin: 30px;
+}
+
+.flex-container img {
+  width: 50%;
+  padding: 10px 70px 10px 70px;
+}
+
+.button1 {
+  text-decoration: none;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 13px;
+  font-weight: lighter;
+  letter-spacing: 10px;
+  display: block;
+  float: right;
+  background-color: rgb(207, 207, 255);
+  border: 5px solid rgb(207, 207, 255);
+  border-radius: 10px;
+  transition: all .2s ease-in-out;
+  padding: 20px;
+  margin: 30px 150px 0px 0px;
+}
+
+.button1:hover {
+  color: aqua;
+  transform: scale(1.1);
+}
+
+.rollingtext {
+  background: rgb(180, 170, 255);
+  position: relative;
+  color: aqua;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 20px;
+  letter-spacing: 30px;
+  padding: 20px;
+  margin: 90px 0px 70px 0px;
+}
+
+.button2 {
+  text-decoration: none;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 10px;
+  font-weight: lighter;
+  letter-spacing: 10px;
+  background-color: rgb(207, 207, 255);
+  border: 5px solid rgb(207, 207, 255);
+  border-radius: 10px;
+  padding: 10px;
+  margin: 5px 60px;
+}
+
+.button2:hover {
+  color: aqua;
+  transform: scale(1.1);
+}
+
+.grid-container img {
+  width: 100%;
+  align-items: center;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  justify-content: space-between;
+  gap: 7px;
+}
+
+.grid-container>div {
+  border-radius: 20px;
+  margin: 20px;
+}
+
+.grid-container :hover {
+  color: aqua;
+  transition-duration: 0.5s;
+}
+
+.item1,
+.item3,
+.item5,
+.item7 {
+  background-color: rgb(186, 173, 255);
+  border: solid 10px rgb(186, 173, 255);
+
+}
+
+.item2,
+.item4,
+.item6,
+.item8 {
+  background-color: rgb(202, 231, 255);
+  border: solid 10px rgb(202, 231, 255);
+}
+
+footer {
+  background-color: rgb(202, 231, 255);
+  height: 50px;
+  margin: 60px 0px 0px 0px;
+  padding: 5px;
+}
+
+@media screen and (max-width:1024px) {
+
+  .textbox h2,
+  h3 {
+    font-size: 20px;
+  }
+
+  .textbox p {
+    font-size: 18px;
+    padding: 10px;
+  }
+
+  .flex-container img {
+    width: 60%;
+    padding: 90px 70px 0px 70px;
+  }
+
+  .item1 {
+    grid-area: 1 / 1 / 2 / span 2;
+  }
+
+  .item2 {
+    grid-area: 1 / 3 / 2 / span 2;
+  }
+
+  .item3 {
+    grid-area: 3 / 1 / 2 / span 2;
+  }
+
+  .item4 {
+    grid-area: 3 / 3 / 2 / span 2;
+  }
+
+  .item5 {
+    grid-area: 5 / 1 / 3 / span 2;
+  }
+
+  .item6 {
+    grid-area: 5 / 3 / 3 / span 2;
+  }
+
+  .item7 {
+    grid-area: 7 / 1 / 5 / span 2;
+  }
+
+  .item8 {
+    grid-area: 7 / 3 / 5 / span 2;
+  }
+
+  .button1,
+  .button2 {
+    margin: 0px 80px 10px 80px;
+    letter-spacing: 10px;
+  }
+}
+
+@media screen and (max-width: 667px) {
+
+  .textbox h2 {
+    font-size: 15px;
+    margin: 0px;
+  }
+
+  .textbox h3 {
+    font-size: 12px;
+    margin: 0px 0px 0px 0px;
+  }
+
+  .textbox p {
+    font-size: 10px;
+    padding: 10px 10px;
+    margin: 0px;
+  }
+
+  .top-heading {
+    margin: 0px 0px 100px 100px;
+  }
+
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+
+  .topnav.responsive {
+    position: relative;
+  }
+
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+
+  .flex-container {
+    flex-direction: column;
+  }
+
+  .item1 {
+    grid-area: 1 / 1 / 2 / span 4;
+  }
+
+  .item2 {
+    grid-area: 3 / 1 / 5 / span 4;
+  }
+
+  .item3 {
+    grid-area: 5 / 1 / 7 / span 4;
+  }
+
+  .item4 {
+    grid-area: 7 / 1 / 9 / span 4;
+  }
+
+  .item5 {
+    grid-area: 9 / 1 / 11 / span 4;
+  }
+
+  .item6 {
+    grid-area: 11 / 1 / 13 / span 4;
+  }
+
+  .item7 {
+    grid-area: 13 / 1 / 15 / span 4;
+  }
+
+  .item8 {
+    grid-area: 15 / 1 / 17 / span 4;
+  }
+
+  .grid-container img {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    float: left;
+    margin: 0px;
+  }
+
+  .button2 {
+    float: right;
+    margin: 0px 30px 5px 0px;
+    letter-spacing: 2px;
+  }
+
+  .button1 {
+    margin: 5px 60px;
+    letter-spacing: 2px;
+  }
 }
