margin ipad toptext

--- a/code/style.css
+++ b/code/style.css
@@ -233,6 +233,10 @@ footer {
     padding: 10px;
   }
 
+  .top-heading {
+    margin: 0px 30px 100px 30px;
+  }
+
   .flex-container img {
     width: 60%;
     padding: 90px 70px 0px 70px;
