--- a/code/style.css
+++ b/code/style.css
@@ -8,6 +8,10 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+p {
+    margin: 0;
+}
+
 img {
     display: block;
 }
@@ -67,11 +71,11 @@ a:visited {
     display: flex;
     flex-direction: row;
     border-radius: 16px;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .container {
-    max-width: 800px;
+    max-width: 1000px;
     margin: 0 auto;
     padding: 0 15px;
 }
@@ -81,8 +85,14 @@ a:visited {
     max-width: 50%;
 }
 
+.hero-content-holder {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .hero-content {
-    padding: 15px;
+    width: 85%;
 }
 
 .hero-heading {
@@ -91,7 +101,7 @@ a:visited {
 }
 
 .hero-preview {
-    margin-top: 5px;
+    margin-top: 8px;
 }
 
 .hero-button {
@@ -99,11 +109,51 @@ a:visited {
     border-radius: 16px;
     background-color: #facc15;
     border: none;
+    margin-top: 16px;
 }
 
 .hero-button:hover {
     background-color: #eab308;
     cursor: pointer;
+}
+
+.news-items {
+    margin-top: 15px;
+    display: grid;
+    gap: 15px;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.news-item {
+    display: flex;
+    flex-direction: column;
+    border-radius: 16px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.news-item:hover {
+    cursor: pointer;
+}
+
+.item-image {
+    max-width: 100%;
+    border-radius: 16px 16px 0 0;
+    height: 150px;
+    object-fit: cover;
+}
+
+.item-content {
+    padding: 15px;
+}
+
+.item-heading {
+    margin-top: 0;
+    margin-bottom: 0px;
+    font-size: 18px;
+}
+
+.item-preview {
+    margin-top: 8px;
 }
 
 @media (max-width: 1024px) {
@@ -139,6 +189,10 @@ a:visited {
     .hero-image {
         max-width: 40%;
     }
+
+    .news-items {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 @media only screen and (max-width: 667px) {
@@ -173,6 +227,10 @@ a:visited {
 
     .hero-preview {
         display: none;
+    }
+
+    .news-items {
+        grid-template-columns: repeat(1, 1fr);
     }
 
 }
