--- a/code/style.css
+++ b/code/style.css
@@ -4,37 +4,44 @@ html {
 }
 
 body {
+  margin: 0px;
+  padding: 0px;
+  justify-content: center;
   background-color: rgb(245, 239, 184);
 }
 
+h2 {
+  background-color: #a77b0b;
+  *border: 2px solid black;
+  font-size: large;
+  padding: 20px;
+  margin-top: 2cm;
+}
+
 nav {
-  background-color: rgb(106, 96, 96);
-  box-sizing: border-box;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
-  align-content: center;
+  box-sizing: border-box;
+  padding: 0px 30px;
+  margin-bottom: 50px;
+  width: 100%;
+  background-color: rgb(106, 96, 96);
 }
 
 nav img {
-  width: 6%;
-  margin: 5px 10px;
+  width: 10%;
+  padding: 20px 10px;
 }
 
-.navbar {
-  margin: 10px 0px;
-  width: 100%;
-  flex-grow: 1;
-}
-
-.navbar a {
+nav a {
   text-decoration: none;
   color: #fff;
   padding: 5px 10px;
 }
 
-.navbar a:hover {
+nav a:hover {
   color: #a77b0b
 }
 
@@ -43,13 +50,33 @@ nav img {
   align-items: center;
   justify-content: center;
   flex-direction: row;
+  margin: 0px 10px;
+
 }
 
 .welcome figure {
   margin: 1px;
-  border: 2px solid black;
+  *border: 2px solid black;
   background-color: black;
-  flex-grow: 1;
+  position: relative;
+}
+
+.welcome img {
+  width: 100%;
+}
+
+.welcome figcaption {
+  box-sizing: border-box;
+  width: 100%;
+  padding: 1px 2px;
+  background-color: #2b352e;
+  position: absolute;
+  bottom: 0;
+}
+
+.welcome h3 {
+  color: aliceblue;
+  font-size: medium;
 }
 
 .welcome-text {
@@ -60,7 +87,7 @@ nav img {
   box-sizing: border-box;
 }
 
-strong {
+.welcome-text strong {
   text-decoration: none;
   font-size: 15px;
   text-align: center;
@@ -82,65 +109,101 @@ strong {
   font-style: italic;
 }
 
-img {
-  display: block;
-  width: 100%;
-  min-height: 100%;
-  object-fit: cover;
-}
-
-figcaption {
-  display: block;
-  bottom: 1;
-  width: 100%;
-  box-sizing: border-box;
-  padding: 3px 10px 1px 10px;
-  margin-top: 1px;
-  background-color: #2b352e;
-}
-
-h3 {
-  color: aliceblue;
-  font-size: medium;
-  text-decoration: none;
-}
-
-h2 {
-  background-color: #a77b0b;
-  border: 2px solid black;
-  font-size: large;
-  padding: 20px;
-  margin-top: 2cm;
-}
-
-
 .activities {
   display: grid;
   grid-template-columns: repeat(4, minmax(auto, 1fr));
-  grid-template-rows: min-content;
+  grid-template-rows: repeat(auto-fit, minmax(auto, 1fr));
   box-sizing: border-box;
-  column-gap: 5px;
+  column-gap: 10px;
   row-gap: 10px;
+  padding: 0px 10px;
 }
 
 .card {
   grid-column: span 1;
-  background-color: black;
-  border: 2px solid black;
+  background-color: white;
+  border: 2px solid rgb(209, 204, 204);
   border-radius: 5px;
-  margin-top: 50px;
-  flex: 1;
   box-shadow: 3px 2px rgb(187, 184, 184);
   box-sizing: border-box;
 }
 
-a {
-  text-decoration: none;
+.card figure {
+  margin: 0px;
+  padding: 0px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  position: relative;
 }
 
-a:hover {
+.card img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.card img:hover {
+  opacity: 0.8;
+}
+
+.card figcaption {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0px 5px;
+  background-color: #2b352e;
+}
+
+.card figcaption:hover {
   font-style: italic;
-  opacity: 0.5;
+}
+
+.card h3 {
+  color: aliceblue;
+  font-size: small;
+}
+
+.card p {
+  font-size: small;
+  color: black;
+  margin: 10px 5px;
+}
+
+.card a {
+  display: block;
+  text-align: center;
+  padding: 5px;
+  margin: 5px;
+  width: 100px;
+  text-decoration: none;
+  border: 2px solid black;
+  border-radius: 2px;
+  background-color: rgb(94, 53, 0);
+  color: aliceblue;
+}
+
+.card a:hover {
+  font-style: italic;
+}
+
+aside p {
+  color: black;
+  margin: 5px;
+  display: inline-block;
+  animation: 3s moreinfotext;
+  animation-timing-function: ease-in-out;
+  width: 100%;
+}
+
+@keyframes moreinfotext {
+  from {
+    margin-left: 100%;
+  }
+
+  to {
+    margin-left: 0%;
+  }
 }
 
 .moreinfo a {
@@ -163,27 +226,47 @@ a:hover {
 footer {
   display: flex;
   flex-direction: row;
-  align-items: flex-end;
-  justify-content: flex-end;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px 30px;
+  width: 100%;
   background-color: rgb(106, 96, 96);
 }
 
-.foot {
-  margin: 15px;
-  padding: 5px;
-  width: 10%;
-  flex-grow: 0.001;
+.foot-text {
+  color: #fff;
+  font-style: italic;
+  width: 30%;
+}
+
+.foot-list {
+  display: flex;
+  box-sizing: border-box;
+  align-items: center;
+  justify-content: space-evenly;
+  column-gap: 40px;
+  width: 70%;
   align-self: center;
+}
+
+.foot-list a {
+  text-decoration: none;
+  color: #fff;
 }
 
 
 @media screen and (max-width:667px) {
   .welcome {
     flex-direction: column;
+    border: 2px solid rgb(209, 204, 204);
+    border-radius: 5px;
+    box-shadow: 3px 2px rgb(187, 184, 184);
   }
 
   .welcome-text {
-    width: 500px;
+    width: 100%;
   }
 
   .activities {
@@ -192,16 +275,16 @@ footer {
     justify-content: center;
   }
 
-  .card {
-    margin-top: 1px;
-  }
-
   body {
     background-color: whitesmoke;
   }
 }
 
 @media screen and (min-width:668px) and (max-width:1023px) {
+  .welcome {
+    flex-wrap: nowrap;
+  }
+
   .activities {
     grid-template-columns: repeat(2, 1fr);
     margin-bottom: 30px;
