--- a/code/style.css
+++ b/code/style.css
@@ -7,7 +7,7 @@ html {
 header {
   background: #c9cace;
   border: 1px #03000a solid;
-
+  margin: 10px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -17,8 +17,9 @@ header {
 section {
   background-color: #c9cace;
   border: 1px solid black;
+  margin: 10px;
   padding: 10px;
-  box-shadow: 10px 10px 10px lightblue;
+  box-shadow: 10px 10px 15px rgb(9, 10, 10);
 }
 
 .div {
