--- a/code/style.css
+++ b/code/style.css
@@ -6,7 +6,8 @@ html {
 header {
   display: flex;
   height: 200px;
-  background-color: gray solid;
+  background-color: rgb(221, 214, 214);
+  border: white solid 4px;
   border-radius: 5px;
   grid-column: 1 / 5;
   grid-row: 1 / 3;
@@ -18,7 +19,7 @@ body {
   display: grid;
   font-family: "Georgia";
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(5, 150px);
+  grid-template-rows: repeat(6, 150px);
 }
 
 .logo {
@@ -56,13 +57,15 @@ nav {
 }
 
 .big-news {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  padding: 10px;
   grid-column: 3 / span 2;
-  grid-row-start: 4;
-  margin-right: 50px;
-  margin-top: 20px;
-}
-
-.main-news {
+  grid-row: 3 / span 4;
+  margin-right: 10px;
+  border: solid rgba(167, 170, 179, 0.3);
+  border-radius: 5px;
   text-align: right;
 }
 
@@ -72,13 +75,12 @@ nav {
   grid-row-start: 4;
   flex-direction: row;
   flex-wrap: wrap;
-  margin-top: 20px;
 }
 
 .grid-cell {
   background-color: white;
   color: gray;
-  padding: 10px;
+  padding: 13px;
   border: solid rgba(167, 170, 179, 0.3);
   border-radius: 5px;
   margin: 5px;
@@ -86,13 +88,11 @@ nav {
   height: 200px;
 }
 
-h2 {
-  display: flex;
+.main-news-title {
   color: rgb(155, 153, 153);
   font-family: "Georgia";
   font-size: 30px;
   margin-bottom: 0px;
-  justify-content: flex-end;
 }
 
 .nav-button:hover {
